Related: fdo#54186 show JCL options, parse JCLOpenUI the same as OpenUI

Change-Id: I495583b56502f349cd789466e9daeb6528ea9048